# talon

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
talon/: __main__.py  talon.py
talon/engine/: __init__.py  findings.py  matcher.py  scorer.py  stack.py
talon/extractors/: __init__.py  banner.py  fingerprint.py  header.py  nmap.py  normalize.py  url.py
talon/output/: __init__.py  json_report.py  md_report.py  table.py
talon/sources/: __init__.py  exploitdb.py  kev.py  nvd.py  osv.py  poc.py
